# nrf-katvr-receiver

./: .gitignore  CMakeLists.txt  Kconfig  LICENSE  README.md  app.overlay  clone-kat-device.ps1  prj.conf  prj_c2core.conf  prj_debug.conf
scripts/: build-release-bin.ps1  clone-kat-device.ps1  fc-text-to-patcher.ps1  flush-feet-sensor.ps1  restore-feet-firmware.cmd  restore-sensor-config.ps1  update-feet-firmware.cmd
scripts/config/: estimate-correction.ps1  get-correction.ps1  get-freq.cmd  set-correction.ps1  set-freq-100hz.cmd  set-freq-133hz.cmd  set-freq-88hz.cmd  y-get-frequency.ps1  y-set-frequency.ps1
scripts/install/: clone-kat-device.ps1  install.cmd
scripts/sensors/: README.md  restore-direction-firmware.cmd  restore-feet-firmware.cmd  update-direction-firmware.cmd  update-feet-firmware.cmd  y-flash-sensor.ps1  y-upload-sensor-config.ps1  z_patch_direction.ps1  z_patch_foot.ps1
scripts/utils/: fc-text-to-patcher.ps1  kat-webgw.cmd  kat-webgw.ps1  serial-log.cmd
src/: kat.h  kat_ble.c  kat_ble.h  kat_ble_pack.c  kat_bt_pack.c  kat_feet.c  kat_main.h  kat_usb.c  kat_usb.h  kat_usb_pack.c  kat_usb_serialno.c  main.c
